force-app/main/default/objects/VS_AwardPrice__c/VS_AwardPrice__c.object-meta.xml
<CustomObject>
    <description>수주품의에 포함되는 견적아이템별 판가 상세 내역 관리 Obj</description>
    <label>Award Price</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Award Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Prices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>