force-app/main/default/objects/VS_AwardPrice__c/fields/DD__c.field-meta.xml
<CustomField>
    <fullName>DD__c</fullName>
    <label>D&amp;D</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>