force-app/main/default/objects/VS_AwardPrice__c/fields/Directbuy__c.field-meta.xml
<CustomField>
    <fullName>Directbuy__c</fullName>
    <label>Direct buy</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>