force-app/main/default/objects/VS_AwardPrice__c/fields/l_AwardApproval__c.field-meta.xml
<CustomField>
    <fullName>l_AwardApproval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Approval</label>
    <referenceTo>VS_AwardApproval__c</referenceTo>
    <relationshipLabel>Award Prices</relationshipLabel>
    <relationshipName>Award_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>