force-app/main/default/objects/VS_AwardPrice__c/fields/l_SalesPlanItem__c.field-meta.xml
<CustomField>
    <fullName>l_SalesPlanItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesPlanItem</label>
    <referenceTo>VS_SalesPlanItem__c</referenceTo>
    <relationshipLabel>Award Prices</relationshipLabel>
    <relationshipName>Award_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>