force-app/main/default/objects/VS_AwardPrice__c/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <label>Logistics</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>