force-app/main/default/objects/VS_AwardPrice__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>