force-app/main/default/objects/VS_AwardPrice__c/fields/ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductPrice__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>