force-app/main/default/objects/VS_AwardPrice__c/fields/Royalty__c.field-meta.xml
<CustomField>
    <fullName>Royalty__c</fullName>
    <label>Royalty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>