force-app/main/default/objects/VS_AwardPrice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>