force-app/main/default/objects/VS_AwardPrice__c/fields/Tooling__c.field-meta.xml
<CustomField>
    <fullName>Tooling__c</fullName>
    <label>Tooling</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>